--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "flowbite": "^2.3.0",
+    "sweetalert2": "^11.10.8",
     "vue": "^3.2.13",
     "vue-cookies": "^1.8.4",
     "vue-router": "^4.0.3",
